--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "es6-promise": "^4.1.1",
+    "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.2.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
