--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.2.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
+    "react-bootstrap-autosuggest": "^0.5.0",
     "react-dom": "^16.0.0",
     "react-leaflet": "^1.7.4",
     "react-router": "^4.2.0",
